--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,35 @@
 {
 	"compilerOptions": {
-		"target": "ES6", // Совместимость с современным JS
-		"module": "ES6", // Используйте "CommonJS" для Node.js
-		"allowJs": true,
-		// "checkJs": true,
-		"outDir": "./dist", // Папка для скомпилированных JS-файлов
-		"rootDir": "./src", // Папка с исходным TS-кодом
-		"strict": true, // Включение строгой проверки типов
-		"esModuleInterop": true // Для совместимости с CommonJS/ESM
+		"target": "ES2020",
+		"lib": ["ES2020", "DOM", "DOM.Iterable"],
+		"module": "ESNext",
+
+		"noEmit": true,
+		"moduleResolution": "bundler",
+		"allowImportingTsExtensions": true,
+		"esModuleInterop": true,
+		"outDir": "./dist",
+		"rootDir": "./src",
+		
+		"strict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUncheckedIndexedAccess": true,
+		"noImplicitOverride": true,
+		"isolatedModules": true,
+		"noPropertyAccessFromIndexSignature": true,
+
+		"baseUrl": "./",
+		"paths": {
+			"@src/*": ["./src/*"],
+			"@assets/*": ["./assets/*"],
+		}
 	},
-	"include": [
-		"src/**/*"
-, "src/index.ts"	],
+	"include": ["src/**/*"],
 	"exclude": [
-		"node_modules"
+		"node_modules",
+		"dist",
 	]
 }
